# pingora-gateway

gateway/: Cargo.toml
gateway/examples/: Gateway.rs
gateway/src/: lib.rs  server_app.rs  server_startup.rs
gateway/src/backends/: backends_manager.rs  dynamic_server_discovery.rs  mod.rs
gateway/src/grpc/: grpc_health_check.rs  mod.rs
gateway/src/origin/: mod.rs  origin.rs
server/: Cargo.toml
server/src/grpc/: grpc_health_check.rs
