[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gateway"
path = "src/lib.rs"

[dependencies]

pingora = {git = "https://github.com/cloudflare/pingora"}
pingora-core = {git = "https://github.com/cloudflare/pingora"}
pingora-http = {git = "https://github.com/cloudflare/pingora"}
pingora-proxy = {git = "https://github.com/cloudflare/pingora"}
pingora-load-balancing = {git = "https://github.com/cloudflare/pingora"}
pingora-error = {git = "https://github.com/cloudflare/pingora"}


prometheus = "0.13.3"
log = "0.4.21"
structopt = "0.3.26"
env_logger = "0.11.3"
async-trait = "0.1.79"
tonic-health = "0.12.2"
tonic = "0.12.0"
lru = "0.12.3"
tokio = "1.37.0"
dashmap = "5.5.3"
