[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pingora = "0.1.0"
pingora-core = "0.1.0"
pingora-http = "0.1.0"
pingora-proxy = "0.1.0"
pingora-load-balancing = "0.1.0"
prometheus = "0.13.3"
log = "0.4.21"
structopt = "0.3.26"
env_logger = "0.11.3"
async-trait = "0.1.79"
tonic-health = "0.11.0"
tonic = "0.11.0"
lru = "0.12.3"
tokio = "1.37.0"
